sandbox/output
GildedRoseTest.java:74: error: variable itemsUpdated is already defined in method normal_item_quality_should_decrease_by_2_if_sellin_no_more_than_0_using_functional_programming()
        List<Item> itemsUpdated = 
                   ^
1 error
